@@ -13,6 +13,9 @@ Bug fixed
 - Using the parameter `lib_loc` in a call to
   :func:`rpy2.robjects.packages.importr` was resulting in an error (PR #119)
 
+- Creating a `layer` through the `rpy2.robjects.lib.ggplot2` interface did
+  accept parameters (PR #122)
+
 New features
 ------------
 
